Add auto-updated Micro settings

--- a/dotconfig/micro/settings.json
+++ b/dotconfig/micro/settings.json
@@ -1,14 +1,23 @@
 {
     "autoclose": true,
     "autoindent": true,
-    "autosave": false,
+    "autosave": 0,
+    "autosu": false,
+    "backup": true,
     "basename": false,
     "colorcolumn": 0,
     "colorscheme": "default",
+    "comment": true,
     "cursorline": true,
+    "diff": true,
+    "diffgutter": false,
+    "divchars": "|-",
+    "divreverse": true,
+    "encoding": "utf-8",
     "eofnewline": false,
     "fastdirty": true,
     "fileformat": "unix",
+    "filetype": "unknown",
     "ftoptions": true,
     "hidehelp": false,
     "ignorecase": false,
@@ -20,11 +29,14 @@
     "literate": true,
     "matchbrace": false,
     "matchbraceleft": false,
+    "mkparents": false,
     "mouse": true,
+    "paste": false,
     "pluginchannels": [
         "https://raw.githubusercontent.com/micro-editor/plugin-channel/master/channel.json"
     ],
     "pluginrepos": [],
+    "readonly": false,
     "rmtrailingws": false,
     "ruler": true,
     "savecursor": false,
@@ -33,9 +45,13 @@
     "scrollbar": false,
     "scrollmargin": 3,
     "scrollspeed": 2,
+    "smartpaste": true,
     "softwrap": false,
     "splitbottom": true,
     "splitright": true,
+    "status": true,
+    "statusformatl": "$(filename) $(modified)($(line),$(col)) $(status.paste)| ft:$(opt:filetype) | $(opt:fileformat) | $(opt:encoding)",
+    "statusformatr": "$(bind:ToggleKeyMenu): bindings, $(bind:ToggleHelp): help",
     "statusline": true,
     "sucmd": "sudo",
     "syntax": true,
@@ -43,5 +59,6 @@
     "tabsize": 4,
     "tabstospaces": false,
     "termtitle": false,
-    "useprimary": true
+    "useprimary": true,
+    "xterm": false
 }
