--- a/dotconfig/starship/starship.toml
+++ b/dotconfig/starship/starship.toml
@@ -1,4 +1,4 @@
-add_newline = false
+add_newline = true
 
 format = """
 $hostname\
@@ -15,4 +15,5 @@ $jobs\
 $battery\
 $time\
 $status\
+$line_break\
 $character"""
