Add basic customization for iTerm2 toolbelt

--- a/dotconfig/iterm2/com.googlecode.iterm2.plist
+++ b/dotconfig/iterm2/com.googlecode.iterm2.plist
@@ -1073,6 +1073,11 @@
 	<integer>0</integer>
 	<key>TabsHaveCloseButton</key>
 	<true/>
+	<key>ToolbeltTools</key>
+	<array>
+		<string>Actions</string>
+		<string>Captured Output</string>
+	</array>
 	<key>UseBorder</key>
 	<false/>
 	<key>VisualIndicatorForEsc</key>
