--- a/dotconfig/iterm2/com.googlecode.iterm2.plist
+++ b/dotconfig/iterm2/com.googlecode.iterm2.plist
@@ -513,12 +513,16 @@
 			<true/>
 			<key>Background Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.12941177189350128</real>
+				<real>0.105133056640625</real>
+				<key>Color Space</key>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.12156862765550613</real>
+				<real>0.084618202368179865</real>
 				<key>Red Component</key>
-				<real>0.11372549086809158</real>
+				<real>0.062721134163439274</real>
 			</dict>
 			<key>Background Image Location</key>
 			<string></string>
@@ -918,7 +922,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>JetBrainsMonoNerdFontCompleteM-Regular 16</string>
+			<string>FiraCodeNerdFontCompleteM-Retina 14</string>
 			<key>Option Key Sends</key>
 			<integer>2</integer>
 			<key>Prompt Before Closing 2</key>
