--- a/dotconfig/iterm2/com.googlecode.iterm2.plist
+++ b/dotconfig/iterm2/com.googlecode.iterm2.plist
@@ -1163,7 +1163,7 @@
 	<key>UseBorder</key>
 	<false/>
 	<key>UseLionStyleFullscreen</key>
-	<false/>
+	<true/>
 	<key>VisualIndicatorForEsc</key>
 	<false/>
 	<key>WindowNumber</key>
